[package]
name = "wine-pair"
version = "0.0.1"
authors = ["WineSeller"]
edition = "2018"
description = "Concentrated liquidity pair contract"
license = "Apache-2.0"
repository = ""

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cw0 = { version = "0.9.1" }
cw20 = { version = "0.9.1" }
cw-storage-plus = { version = "0.9.1" }
cosmwasm-std = { version = "0.16.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
terra-cosmwasm = { version = "2.2.0" }
protobuf = { version = "2", features = ["with-bytes"] }
wineswap = { path = "../../packages/wineswap", default-features = false, version = "0.0.1"}
wineswap-math = { path = "../../packages/math", default-features = false, version = "0.0.1"}

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false